Add hungry horse and street racer projects, edit css styling to center project images, rearrange home screen layout, change background image

--- a/projects/2d-platformer.html
+++ b/projects/2d-platformer.html
@@ -91,9 +91,11 @@
                         <strong>Role: </strong> Lead Developer and Game Programmer
                     </p> 
 
-                    <a href="../assets/img/projects/2D-Platformer/jumping over enemy - level1.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/2D-Platformer/jumping over enemy - level1.png" alt="">
-                    </a>
+                    <div class="clearfix">
+                        <a href="../assets/img/projects/2D-Platformer/jumping over enemy - level1.png">
+                            <img class="img-responsive img-border img-center" src="../assets/img/projects/2D-Platformer/jumping over enemy - level1.png" alt="">
+                        </a>
+                    </div>
 
                     <hr class="visible-xs">
 
