--- a/projects/budget-planner.html
+++ b/projects/budget-planner.html
@@ -87,31 +87,33 @@
                     <hr>
                     <p class="intro-text text-center">
                         Released September 2023<br />
-                        Student Mobile Development Project<br />
+                        Student Solo Mobile Development Project<br />
                     </p> 
 
-                    <a href="../assets/img/projects/Transaction Tracker/Withdrawls_Screen.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Transaction Tracker/Withdrawls_Screen.png" alt="">
-                    </a>
-                    <a href="../assets/img/projects/Transaction Tracker/Deposits_Screen.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Transaction Tracker/Deposits_Screen.png" alt="">
-                    </a>
-                    <a href="../assets/img/projects/Transaction Tracker/Recent_Withdrawls.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Transaction Tracker/Recent_Withdrawls.png" alt="">
-                    </a>
-                    <a href="../assets/img/projects/Transaction Tracker/New_Withdrawl.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Transaction Tracker/New_Withdrawl.png" alt="">
-                    </a>
-                    <a href="../assets/img/projects/Transaction Tracker/Error_Handling.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Transaction Tracker/Error_Handling.png" alt="">
-                    </a>
+                    <div class="clearfix">
+                        <a href="../assets/img/projects/Budget Planner/Withdrawls_Screen.png">
+                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Budget Planner/Withdrawls_Screen.png" alt="">
+                        </a>
+                        <a href="../assets/img/projects/Budget Planner/Deposits_Screen.png">
+                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Budget Planner/Deposits_Screen.png" alt="">
+                        </a>
+                        <a href="../assets/img/projects/Budget Planner/Recent_Withdrawls.png">
+                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Budget Planner/Recent_Withdrawls.png" alt="">
+                        </a>
+                        <a href="../assets/img/projects/Budget Planner/New_Withdrawl.png">
+                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Budget Planner/New_Withdrawl.png" alt="">
+                        </a>
+                        <a href="../assets/img/projects/Budget Planner/Error_Handling.png">
+                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Budget Planner/Error_Handling.png" alt="">
+                        </a>
+                    </div>
 
                     <hr class="visible-xs">
                     <p>
-                        This was a mobile app I made for the University of London. It allows a user to create withdrawl and deposit transactions to help
-                        users track their budgets. Users can add, update, or delete each transaction. The data is stored on a realtime database using
-                        Google Firebase. Handles errors if newly added or updated transactions are not created correctly, or if the database is not
-                        working correctly. Users can also view any transactions in the last 7 days by clicking on the Recents button.
+                        This was a mobile app I made for the University of London. It allows a user to create withdrawl and deposit transactions
+                        in order to track their budget. Users can add, update, or delete each transaction. The data is stored on a realtime database
+                        using Google Firebase. The app handles errors if newly added or updated transactions are not created correctly, or if the
+                        database is not working properly. Users can also view any transactions in the last 7 days by clicking on the Recents button.
                     </p>
 
                     <p><strong>Technologies used:</strong>
