--- a/projects/crypt-raider.html
+++ b/projects/crypt-raider.html
@@ -88,43 +88,43 @@
                     <p class="intro-text text-center">
                         Released April 2023<br />
                         Personal Project<br />
-                        <strong>Role: </strong> Sole Programmer
                     </p> 
-                    <a href="../assets/img/projects/Crypt-Raider/Crypt-Raider-Statue-Held.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Crypt-Raider/Crypt-Raider-Statue-Held.png" alt="">
-                    </a>
-                    <a href="../assets/img/projects/Crypt-Raider/Crypt-Raider-Statue-Still.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Crypt-Raider/Crypt-Raider-Statue-Still.png" alt="">
-                    </a>
-                    <a href="../assets/img/projects/Crypt-Raider/Crypt-Raider-Torch.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Crypt-Raider/Crypt-Raider-Torch.png" alt="">
-                    </a>
-                    <a href="../assets/img/projects/Crypt-Raider/Crypt-Raider-Dungeon.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Crypt-Raider/Crypt-Raider-Dungeon.png" alt="">
-                    </a>
-                    <a href="../assets/img/projects/Crypt-Raider/Crypt-Raider-Corridor.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Crypt-Raider/Crypt-Raider-Corridor.png" alt="">
-                    </a>
-                    <a href="../assets/img/projects/Crypt-Raider/Crypt-Raider-Door-Trigger.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Crypt-Raider/Crypt-Raider-Door-Trigger.png" alt="">
-                    </a>
-                    <a href="../assets/img/projects/Crypt-Raider/Crypt-Raider-Grabber.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Crypt-Raider/Crypt-Raider-Grabber.png" alt="">
-                    </a>
-                    
-                    <a href="../assets/img/projects/Crypt-Raider/Crypt-Raider-BP_Player-Outliner.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Crypt-Raider/Crypt-Raider-BP_Player-Outliner.png" alt="">
-                    </a>
-                    <a href="../assets/img/projects/Crypt-Raider/Crypt-Raider-BP_Torch_Dungeon-Outliner.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Crypt-Raider/Crypt-Raider-BP_Torch_Dungeon-Outliner.png" alt="">
-                    </a>
-                    <a href="../assets/img/projects/Crypt-Raider/Crypt-Raider-BP_SecretWall-Outliner.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Crypt-Raider/Crypt-Raider-BP_SecretWall-Outliner.png" alt="">
-                    </a>
+                    <div class="clearfix">
+                        <a href="../assets/img/projects/Crypt-Raider/Crypt-Raider-Statue-Held.png">
+                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Crypt-Raider/Crypt-Raider-Statue-Held.png" alt="">
+                        </a>
+                        <a href="../assets/img/projects/Crypt-Raider/Crypt-Raider-Statue-Still.png">
+                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Crypt-Raider/Crypt-Raider-Statue-Still.png" alt="">
+                        </a>
+                        <a href="../assets/img/projects/Crypt-Raider/Crypt-Raider-Torch.png">
+                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Crypt-Raider/Crypt-Raider-Torch.png" alt="">
+                        </a>
+                        <a href="../assets/img/projects/Crypt-Raider/Crypt-Raider-Dungeon.png">
+                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Crypt-Raider/Crypt-Raider-Dungeon.png" alt="">
+                        </a>
+                        <a href="../assets/img/projects/Crypt-Raider/Crypt-Raider-Corridor.png">
+                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Crypt-Raider/Crypt-Raider-Corridor.png" alt="">
+                        </a>
+                        <a href="../assets/img/projects/Crypt-Raider/Crypt-Raider-Door-Trigger.png">
+                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Crypt-Raider/Crypt-Raider-Door-Trigger.png" alt="">
+                        </a>
+                        <a href="../assets/img/projects/Crypt-Raider/Crypt-Raider-Grabber.png">
+                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Crypt-Raider/Crypt-Raider-Grabber.png" alt="">
+                        </a>
+                        <a href="../assets/img/projects/Crypt-Raider/Crypt-Raider-BP_Player-Outliner.png">
+                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Crypt-Raider/Crypt-Raider-BP_Player-Outliner.png" alt="">
+                        </a>
+                        <a href="../assets/img/projects/Crypt-Raider/Crypt-Raider-BP_Torch_Dungeon-Outliner.png">
+                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Crypt-Raider/Crypt-Raider-BP_Torch_Dungeon-Outliner.png" alt="">
+                        </a>
+                        <a href="../assets/img/projects/Crypt-Raider/Crypt-Raider-BP_SecretWall-Outliner.png">
+                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Crypt-Raider/Crypt-Raider-BP_SecretWall-Outliner.png" alt="">
+                        </a>
 
-                    <a href="../assets/img/projects/Crypt-Raider/Crypt-Raider-BP_SecretWall-Outliner.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Crypt-Raider/Crypt-Raider-BP_SecretWall-Outliner.png" alt="">
-                    </a>
+                        <a href="../assets/img/projects/Crypt-Raider/Crypt-Raider-BP_SecretWall-Outliner.png">
+                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Crypt-Raider/Crypt-Raider-BP_SecretWall-Outliner.png" alt="">
+                        </a>
+                    </div>
 
                     <hr class="visible-xs">
 
