--- a/projects/hungry-horse.html
+++ b/projects/hungry-horse.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Instagram Filter - Sam Sherrod</title>
+    <title>Red Knight - Sam Sherrod</title>
     <link rel="icon" type="image/x-icon" href="../assets/img/about/Sam Profile Picture.jpg?">
 
     <!-- Bootstrap Core CSS -->
@@ -82,77 +82,69 @@
                 <div class="col-lg-12">
                     <hr>
                     <h2 class="intro-text text-center">
-                        <strong>Instagram Filter</strong> - Image Processing Tool
+                        <strong>Hungry Horse</strong> - iOS/Android Mobile Game App
                     </h2>
                     <hr>
                     <p class="intro-text text-center">
-                        Released March 2022</br />
-                        Student Solo Graphics Programming Project<br />
+                        In Development - Expected Release Spring 2024<br />
+                        Professional App Made in Conjuction with a Phd. student at The University of Victoria<br />
+                        <strong>Role:</strong> Lead Programmer and Game Designer
                     </p> 
-
                     <div class="clearfix">
-                        <a href="../assets/img/projects/Instagram Filter/Instagram Filter - SepiaBlur.png">
-                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Instagram Filter/Instagram Filter - SepiaBlur.png" alt="">
+                        <a href="../assets/img/projects/Hungry Horse/hungry-horse-wireframe.png">
+                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Hungry Horse/hungry-horse-wireframe.png" alt="">
                         </a>
-                        <a href="../assets/img/projects/Instagram Filter/Instagram Filter - Gray.png">
-                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Instagram Filter/Instagram Filter - Gray.png" alt="">
+                        <a href="../assets/img/projects/Hungry Horse/hungry-horse-home-screen.png">
+                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Hungry Horse/hungry-horse-home-screen.png" alt="">
                         </a>
-                        <a href="../assets/img/projects/Instagram Filter/Instagram Filter - EdgeColor.png">
-                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Instagram Filter/Instagram Filter - EdgeColor.png" alt="">
+                        <a href="../assets/img/projects/Hungry Horse/hungry-horse-how-to-play-page.png">
+                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Hungry Horse/hungry-horse-how-to-play-page.png" alt="">
                         </a>
-                        <a href="../assets/img/projects/Instagram Filter/Instagram Filter - Inverse.png">
-                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Instagram Filter/Instagram Filter - Inverse.png" alt="">
+                        <a href="../assets/img/projects/Hungry Horse/hungry-horse-field.png">
+                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Hungry Horse/hungry-horse-field.png" alt="">
                         </a>
-                        <a href="../assets/img/projects/Instagram Filter/Instagram Filter - ThresholdMedium.png">
-                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Instagram Filter/Instagram Filter - ThresholdMedium.png" alt="">
+                        <a href="../assets/img/projects/Hungry Horse/hungry-horse-barn.png">
+                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Hungry Horse/hungry-horse-barn.png" alt="">
                         </a>
-                        <a href="../assets/img/projects/Instagram Filter/Instagram Filter - Custom.png">
-                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Instagram Filter/Instagram Filter - Custom.png" alt="">
+                        <a href="../assets/img/projects/Hungry Horse/hungry-horse-arena.png">
+                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Hungry Horse/hungry-horse-arena.png" alt="">
                         </a>
+
                     </div>
 
                     <hr class="visible-xs">
 
-                    <p>This is an image processing tool that allows you to apply 10 different filters to a preset image. It
-                        contains a border, vignette, and a radial blur, as well as sliders and checkboxes to allow the
-                        user to adjust the image. </p>
-                    <p>It is a tool I made for a graphics programming course at the University of London using p5.js from the ground up. The image on the
-                        left is copied and displayed on the right. Then each filter is created by looping over every pixel in the copied image and,
-                        applies a function using a specific matrix to change the red, green, blue, and alpha values of each pixel.</p>
-
-                    <p><strong>Features include:</strong>
-                        <ul>
-                            <li>Able to switch between 10 filters</li>
-                            <li>Multiple sliders to dynamically change effects</li>
-                            <li>The threshold value can be changed for the threshold filter</li>
-                            <li>The border can be adjusted</li>
-                            <li>Blur can be toggled on or off - recommend toggling off to speed up</li>
-                            program and see other filters and sliders update quicker
-                            <li>Blur size can be changed with the min and max sliders</li>
-                            <li>Different color effects can be created by changing the red, green
-                            blue, and alpha values when blur is turned on. I like turning on the
-                            edge detect filter, and having red 1, green 2, blue 3 for instance</li>
-                        </ul>
+                    <p>﻿
+                        Hungry Horse is a mobile app of a gamified cognitive task for research. Using a whack-a-mole style of game play, participants engage
+                        in an emotional Go/No Go type of cognitive task that measures impulsiveness by determining an individuals ability to inhibit a response.
+                        The behavioural measures include accuracy and reaction time during gameplay.
+                    </p>
+                    <p>
+                        My role has been to create the wireframe currently shown, as well as I am currently programming a prototype in Unity by myself. After
+                        the prototype and design desicions have been finalized, I will create a working app to be released in Spring 2024 for testing.
+                    </p>
+                    <p>
+                        All data collected from participants will be securely stored on a realtime database using Google Firebase.
                     </p>
 
                     <p><strong>Technologies used:</strong>
                         <ul>
-                            <li>JavaScript</li>
-                            <li>p5.js</li>
-                            <li>Image provided by UoL</li>
+                            <li>C#</li>
+                            <li>Unity</li>
+                            <li><a href="https://firebase.google.com/">Google Firebase Backend-as-a-service (Baas)</a></li>
+                            <li>Various custom art and sound assets</li>
+                            <li>Google Workspace, Microsoft 365 for private collaboration</li>
                         </ul>
                     </p>
 
-                    <a href="https://samsherrod.itch.io/instagram-filter" target="_blank" class="btn btn-default btn-lg">Try Tool Online</a>
-
-                    <p><strong>Note:</strong> For this particular university project, I am unable to show my code to the public due to plagiarism
-                        concerns. If you would like to see the code for this, please <a href="../contact.html"><strong>contact</strong></a> me.</p>
+                    <a href="https://hungryhorse.framer.website/" target="_blank" class="btn btn-default btn-lg">View Prototype Online</a>
                 </div>
             </div>
         </div>
     </div>
     <!-- /.container -->
 
+    
     <footer>
         <div class="container">
             <div class="row">
