--- a/projects/ottodecks-dj-app.html
+++ b/projects/ottodecks-dj-app.html
@@ -90,19 +90,20 @@
                         Student Solo Object Oriented Programming Project<br />
                     </p> 
 
-                    <a href="../assets/img/projects/Ottodecks/Ottodecks Volume Up.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Ottodecks/Ottodecks Volume Up.png" alt="">
-                    </a>
-                    <a href="../assets/img/projects/Ottodecks/Ottodecks Default.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Ottodecks/Ottodecks Default.png" alt="">
-                    </a>
-                    <a href="../assets/img/projects/Ottodecks/Ottodecks Track Waveform.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Ottodecks/Ottodecks Track Waveform.png" alt="">
-                    </a>
-                    <a href="../assets/img/projects/Ottodecks/Ottodecks Playlist.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Ottodecks/Ottodecks Playlist.png" alt="">
-                    </a>
-
+                    <div class="clearfix">
+                        <a href="../assets/img/projects/Ottodecks/Ottodecks Volume Up.png">
+                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Ottodecks/Ottodecks Volume Up.png" alt="">
+                        </a>
+                        <a href="../assets/img/projects/Ottodecks/Ottodecks Default.png">
+                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Ottodecks/Ottodecks Default.png" alt="">
+                        </a>
+                        <a href="../assets/img/projects/Ottodecks/Ottodecks Track Waveform.png">
+                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Ottodecks/Ottodecks Track Waveform.png" alt="">
+                        </a>
+                        <a href="../assets/img/projects/Ottodecks/Ottodecks Playlist.png">
+                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Ottodecks/Ottodecks Playlist.png" alt="">
+                        </a>
+                    </div>
                     <hr class="visible-xs">
 
                     <p>This is an audio application that allows you to manipulate music tracks as a DJ would. </p>
