--- a/projects/street-racer.html
+++ b/projects/street-racer.html
@@ -82,38 +82,16 @@
                 <div class="col-lg-12">
                     <hr>
                     <h2 class="intro-text text-center">
-                        <strong>Red Knight</strong> - 2D Action Platformer
+                        <strong>Street Racer</strong> - 3D Car Racing Game
                     </h2>
                     <hr>
                     <p class="intro-text text-center">
-                        Released March 2023<br />
-                        Student Group Games Development Project<br />
-                        <strong>Role: </strong> Lead Programmer
+                        In Development<br />
+                        Personal Project Showcasing 3D Physics and AI Techniques<br />
                     </p> 
                     <div class="clearfix">
                         <a href="../assets/img/projects/Red Knight/Red Knight Title Screen.png">
                             <img class="img-responsive img-border img-center" src="../assets/img/projects/Red Knight/Red Knight Title Screen.png" alt="">
-                        </a>
-                        <a href="../assets/img/projects/Red Knight/Red Knight - Level 1.png">
-                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Red Knight/Red Knight - Level 1.png" alt="">
-                        </a>
-                        <a href="../assets/img/projects/Red Knight/Red Knight - Level 2.png">
-                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Red Knight/Red Knight - Level 2.png" alt="">
-                        </a>
-                        <a href="../assets/img/projects/Red Knight/Red Knight - Level 3.png">
-                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Red Knight/Red Knight - Level 3.png" alt="">
-                        </a>
-                        <a href="../assets/img/projects/Red Knight/Red Knight - Level 4.png">
-                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Red Knight/Red Knight - Level 4.png" alt="">
-                        </a>
-                        <a href="../assets/img/projects/Red Knight/Red Knight - Level 5.png">
-                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Red Knight/Red Knight - Level 5.png" alt="">
-                        </a>
-                        <a href="../assets/img/projects/Red Knight/Red Knight - Level 6.png">
-                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Red Knight/Red Knight - Level 6.png" alt="">
-                        </a>
-                        <a href="../assets/img/projects/Red Knight/Red Knight - Level 7.png">
-                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Red Knight/Red Knight - Level 7.png" alt="">
                         </a>
                     </div>
 
@@ -171,13 +149,12 @@
                         <ul>
                             <li>C#</li>
                             <li>Unity 2019.4.40f1</li>
-                            <li>Various art and sound assets from Unity Asset Store and Itch.io</li>
-                            <li>Google Drive for private collaboration</li>
+                            <li>Various art and sound assets from Unity Asset Store</li>
                         </ul>
                     </p>
 
-                    <a href="https://samsherrod.itch.io/red-knight" target="_blank" class="btn btn-default btn-lg">Play Game Online</a>
-                    <a href="https://github.com/samsherrod/red-knight-V2" target="_blank" class="btn btn-default btn-lg">View Source Code</a>
+                    <a href="https://samsherrod.itch.io/street-racer" target="_blank" class="btn btn-default btn-lg">Play Game Online</a>
+                    <a href="https://github.com/samsherrod/Street-Racer" target="_blank" class="btn btn-default btn-lg">View Source Code</a>
                 </div>
             </div>
         </div>
