--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
                         <!-- Wrapper for slides -->
                         <div class="carousel-inner">
                             <div class="item active">
+                                <img class="img-responsive img-full" src="assets/img/projects/Hungry Horse/hungry-horse-home-screen.png" alt="">
+                            </div>
+                            <div class="item">
                                 <img class="img-responsive img-full" src="assets/img/projects/Crypt-Raider/Crypt-Raider-Statue-Held.png" alt="">
                             </div>
                             <div class="item">
@@ -139,9 +142,25 @@
                     <strong>Featured projects:</strong>  
                 </h1>
 
+                <!-- Hungry Horse -->
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center"> <strong>Crypt Raider</strong> - Personal Project</h2>
+                    <h2 class="intro-text text-center"> <strong>Hungry Horse</strong> Professional Project</h2>
+                    <hr>
+                    <a href="projects/hungry-horse.html">
+                        <img class="img-responsive img-border img-left" src="assets/img/projects/Hungry Horse/hungry-horse-home-screen.png" alt="">
+                    </a>
+                    <hr class="visible-xs">
+                    <p>In Development - Expected Release Spring 2024</p>
+                    <p>A mobile game that collects data for research puposes in children with Autism. It is currently in development being
+                        built with the Unity game engine, and funded by Mitacs.
+                    </p>
+                    <a href="projects/hungry-horse.html" class="btn btn-default btn-lg">Read More</a>
+                </div>
+
+                <div class="col-lg-12">
+                    <hr>
+                    <h2 class="intro-text text-center"> <strong>Crypt Raider</strong> 3D Puzzle Demo - Personal Project</h2>
                     <hr>
                     <a href="projects/crypt-raider.html">
                         <img class="img-responsive img-border img-left" src="assets/img/projects/Crypt-Raider/Crypt-Raider-Statue-Held.png" alt="">
@@ -157,7 +176,7 @@
                 <div class="col-lg-12">
                     <hr>
                     <h2 class="intro-text text-center">
-                        <strong>Red Knight</strong> - 2D Action Platformer
+                        <strong>Red Knight</strong> - 2D Action Platformer - Student Project
                     </h2>
                     
                     <hr>
@@ -185,24 +204,6 @@
                         and HLSL.</p>
                     <a href="projects/shader-demo.html" class="btn btn-default btn-lg">Learn More</a>
                     <a href="https://samsherrod.itch.io/shader-demo" target="_blank" class="btn btn-default btn-lg">View Demo Online</a>
-                </div>
-
-                <div class="col-lg-12">
-                    <hr>
-                    <h2 class="intro-text text-center">
-                        <strong>Star Hunter</strong> - Bow and Arrow VR Project
-                    </h2>
-                    <hr>
-                    <a href="projects/star-hunter.html">
-                        <img class="img-responsive img-border img-left" src="assets/img/projects/Star Hunter/Star Hunter 1.png" alt="">
-                    </a>
-                    <hr class="visible-xs">
-                    <p>March 2023</p>
-                    <p>Star Hunter is a casual VR game I created where you can shoot stars with a bow and arrow to connect them like in Connect The Dots.
-                    </p>
-                    <p><strong>Note:</strong> This game is only available to download on Windows or MacOS. It is not available to try online.</p>
-                    <a href="projects/star-hunter.html" class="btn btn-default btn-lg">Learn More</a>
-                    <a href="https://samsherrod.itch.io/star-hunter" target="_blank" class="btn btn-default btn-lg">Download on Itch.io</a>
                 </div>
             </div>
         </div>
