--- a/projects.html
+++ b/projects.html
@@ -77,21 +77,61 @@
 
     <div class="container">
 
+        <!-- Hungry Horse -->
+        <div class="row">
+            <div class="box">      
+                <div class="col-lg-12">
+                    <hr>
+                    <h2 class="intro-text text-center"> <strong>Hungry Horse</strong> iOS/Android Mobile Game - Professional Project</h2>
+                    <h2 class="intro-text text-center"> <strong>C# | Game Dev | Unity | Google Firebase</strong></h2>
+                    <hr>
+                    <a href="projects/hungry-horse.html">
+                        <img class="img-responsive img-border img-left" src="assets/img/projects/Hungry Horse/hungry-horse-home-screen.png" alt="">
+                    </a>
+                    <hr class="visible-xs">
+                    <p>In Development - Expected Release Spring 2024</p>
+                    <p>A mobile game that collects data for research puposes in children with Autism. It is currently in development being
+                        built with the Unity game engine, and funded by Mitacs.
+                    </p>
+                    <a href="projects/hungry-horse.html" class="btn btn-default btn-lg">Read More</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Street Racer
+        <div class="row">
+            <div class="box">      
+                <div class="col-lg-12">
+                    <hr>
+                    <h2 class="intro-text text-center"> <strong>Street Racer</strong> 3D Car Racing Game - Personal Project</h2>
+                    <h2 class="intro-text text-center"> <strong>C# | Game Dev | AI | Unity</strong></h2>
+                    <hr>
+                    <a href="projects/street-racer.html">
+                        <img class="img-responsive img-border img-left" src="assets/img/projects/Transaction Tracker/Withdrawls_Screen.png" alt="">
+                    </a>
+                    <hr class="visible-xs">
+                    <p>Released September 2023</p>
+                    <p>A car racing game.</p>
+                    <a href="projects/street-racer.html" class="btn btn-default btn-lg">Read More</a>
+                </div>
+            </div>
+        </div> -->
+
         <!-- Budget Planner -->
         <div class="row">
             <div class="box">      
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center"> <strong>Budget Planner</strong> iOS/Android Mobile App </h2>
+                    <h2 class="intro-text text-center"> <strong>Budget Planner</strong> iOS/Android Mobile App - Student Project</h2>
                     <h2 class="intro-text text-center"> <strong>JavaScript | React Native | Google Firebase Baas | Expo</strong></h2>
                     <hr>
                     <a href="projects/budget-planner.html">
-                        <img class="img-responsive img-border img-left" src="assets/img/projects/Transaction Tracker/Withdrawls_Screen.png" alt="">
+                        <img class="img-responsive img-border img-left" src="assets/img/projects/Budget Planner/Withdrawls_Screen.png" alt="">
                     </a>
                     <hr class="visible-xs">
                     <p>Released September 2023</p>
                     <p>A budget planning mobile app that allows users to track their withdrawls and deposits in order to gain a better understanding
-                        of your money coming in and out.</p>
+                        of their money coming in and out.</p>
                     <a href="projects/budget-planner.html" class="btn btn-default btn-lg">Read More</a>
                 </div>
             </div>
@@ -102,7 +142,7 @@
             <div class="box">      
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center"> <strong>Red Knight</strong> 2D Action Platformer - Student Project </h2>
+                    <h2 class="intro-text text-center"> <strong>Red Knight</strong> 2D Action Platformer - Student Project</h2>
                     <h2 class="intro-text text-center"> <strong>C# | Game Dev | Unity | Agile</strong></h2>
                     <hr>
                     <a href="projects/red-knight.html">
