--- a/projects/shader-demo.html
+++ b/projects/shader-demo.html
@@ -89,36 +89,39 @@
                         Released February 2023</br />
                         Personal Project Showcasing 3D Graphics Programming and Shader Skills<br />
                     </p> 
-                    <a href="../assets/img/projects/Shader Demo/Hologram Shader.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Shader Demo/Hologram Shader.png" alt="">
-                    </a>
-                    <a href="../assets/img/projects/Shader Demo/3D Disolve Shader.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Shader Demo/3D Disolve Shader.png" alt="">
-                    </a>
-                    <a href="../assets/img/projects/Shader Demo/2D Disolve Shader.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Shader Demo/2D Disolve Shader.png" alt="">
-                    </a>
-                    <a href="../assets/img/projects/Shader Demo/Force Field Shader.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Shader Demo/Force Field Shader.png" alt="">
-                    </a>
-                    <a href="../assets/img/projects/Shader Demo/Cartoon Water Shader.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Shader Demo/Cartoon Water Shader.png" alt="">
-                    </a>
-                    <a href="../assets/img/projects/Shader Demo/Fresnel Glow Shader.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Shader Demo/Fresnel Glow Shader.png" alt="">
-                    </a>
-                    <a href="../assets/img/projects/Shader Demo/Shimmer Shader.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Shader Demo/Shimmer Shader.png" alt="">
-                    </a>
-                    <a href="../assets/img/projects/Shader Demo/Gradient Shader.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Shader Demo/Gradient Shader.png" alt="">
-                    </a>
-                    <a href="../assets/img/projects/Shader Demo/2D Offset Position Shader.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Shader Demo/2D Offset Position Shader.png" alt="">
-                    </a>
-                    <a href="../assets/img/projects/Shader Demo/Texture Subtraction Shader.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Shader Demo/Texture Subtraction Shader.png" alt="">
-                    </a>
+                    
+                    <div class="clearfix">
+                        <a href="../assets/img/projects/Shader Demo/Hologram Shader.png">
+                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Shader Demo/Hologram Shader.png" alt="">
+                        </a>
+                        <a href="../assets/img/projects/Shader Demo/3D Disolve Shader.png">
+                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Shader Demo/3D Disolve Shader.png" alt="">
+                        </a>
+                        <a href="../assets/img/projects/Shader Demo/2D Disolve Shader.png">
+                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Shader Demo/2D Disolve Shader.png" alt="">
+                        </a>
+                        <a href="../assets/img/projects/Shader Demo/Force Field Shader.png">
+                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Shader Demo/Force Field Shader.png" alt="">
+                        </a>
+                        <a href="../assets/img/projects/Shader Demo/Cartoon Water Shader.png">
+                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Shader Demo/Cartoon Water Shader.png" alt="">
+                        </a>
+                        <a href="../assets/img/projects/Shader Demo/Fresnel Glow Shader.png">
+                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Shader Demo/Fresnel Glow Shader.png" alt="">
+                        </a>
+                        <a href="../assets/img/projects/Shader Demo/Shimmer Shader.png">
+                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Shader Demo/Shimmer Shader.png" alt="">
+                        </a>
+                        <a href="../assets/img/projects/Shader Demo/Gradient Shader.png">
+                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Shader Demo/Gradient Shader.png" alt="">
+                        </a>
+                        <a href="../assets/img/projects/Shader Demo/2D Offset Position Shader.png">
+                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Shader Demo/2D Offset Position Shader.png" alt="">
+                        </a>
+                        <a href="../assets/img/projects/Shader Demo/Texture Subtraction Shader.png">
+                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Shader Demo/Texture Subtraction Shader.png" alt="">
+                        </a>
+                    </div>
 
                     <hr class="visible-xs">
 
