--- a/projects/smart-home.html
+++ b/projects/smart-home.html
@@ -89,21 +89,24 @@
                         Released September 2022</br />
                         Student Front and Backend Web Project<br />
                     </p> 
-                    <a href="../assets/img/projects/Smart-Home/add device.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Smart-Home/add device.png" alt="">
-                    </a>
-                    <a href="../assets/img/projects/Smart-Home/list devices.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Smart-Home/list devices.png" alt="">
-                    </a>
-                    <a href="../assets/img/projects/Smart-Home/search devices.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Smart-Home/search devices.png" alt="">
-                    </a>
-                    <a href="../assets/img/projects/Smart-Home/list searched device.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Smart-Home/list searched device.png" alt="">
-                    </a>
-                    <a href="../assets/img/projects/Smart-Home/remove device.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Smart-Home/remove device.png" alt="">
-                    </a>
+
+                    <div class="clearfix">
+                        <a href="../assets/img/projects/Smart-Home/add device.png">
+                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Smart-Home/add device.png" alt="">
+                        </a>
+                        <a href="../assets/img/projects/Smart-Home/list devices.png">
+                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Smart-Home/list devices.png" alt="">
+                        </a>
+                        <a href="../assets/img/projects/Smart-Home/search devices.png">
+                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Smart-Home/search devices.png" alt="">
+                        </a>
+                        <a href="../assets/img/projects/Smart-Home/list searched device.png">
+                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Smart-Home/list searched device.png" alt="">
+                        </a>
+                        <a href="../assets/img/projects/Smart-Home/remove device.png">
+                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Smart-Home/remove device.png" alt="">
+                        </a>
+                    </div>
 
                     <hr class="visible-xs">
 
