--- a/projects/star-hunter.html
+++ b/projects/star-hunter.html
@@ -89,18 +89,21 @@
                         Released March 2023</br />
                         Student Solo Virtual Reality Project<br />
                     </p> 
-                    <a href="../assets/img/projects/Star Hunter/Star Hunter 1.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Star Hunter/Star Hunter 1.png" alt="">
-                    </a>
-                    <a href="../assets/img/projects/Star Hunter/Star Hunter 2.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Star Hunter/Star Hunter 2.png" alt="">
-                    </a>
-                    <a href="../assets/img/projects/Star Hunter/Star Hunter 3.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Star Hunter/Star Hunter 3.png" alt="">
-                    </a>
-                    <a href="../assets/img/projects/Star Hunter/Star Hunter 4.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Star Hunter/Star Hunter 4.png" alt="">
-                    </a>
+
+                    <div class="clearfix">
+                        <a href="../assets/img/projects/Star Hunter/Star Hunter 1.png">
+                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Star Hunter/Star Hunter 1.png" alt="">
+                        </a>
+                        <a href="../assets/img/projects/Star Hunter/Star Hunter 2.png">
+                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Star Hunter/Star Hunter 2.png" alt="">
+                        </a>
+                        <a href="../assets/img/projects/Star Hunter/Star Hunter 3.png">
+                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Star Hunter/Star Hunter 3.png" alt="">
+                        </a>
+                        <a href="../assets/img/projects/Star Hunter/Star Hunter 4.png">
+                            <img class="img-responsive img-border img-center" src="../assets/img/projects/Star Hunter/Star Hunter 4.png" alt="">
+                        </a>
+                    </div>
 
                     <hr class="visible-xs">
 
