Add Hungry Horse Prototype explanation

--- a/projects/hungry-horse.html
+++ b/projects/hungry-horse.html
@@ -137,6 +137,11 @@
                         </ul>
                     </p>
 
+                    <p>
+                        <br>
+                            <strong>Please Note:</strong> the wireframe/prototype listed below only currently only allows you to open different pages or "levels" by clicking on the
+                            different buttons throughout the game, but does not function as the game ultimately will. These are only "placeholder" images.
+                    </p>
                     <a href="https://hungryhorse.framer.website/" target="_blank" class="btn btn-default btn-lg">View Prototype Online</a>
                 </div>
             </div>
