Edit about.html, reorganize projects on index.html

--- a/about.html
+++ b/about.html
@@ -91,15 +91,18 @@
                 </div>
 
                 <p>Hi, I'm Sam! Thanks for checking out my portfolio.</p>
-                <p>I'm a software developer with a special interest in game design for entertainment, research,
-                    and practical applications with 3+ years related experience, as well as 10+ years experience
-                    as an equestrian and wellness business owner. I have a unique blend of experienced entrepreneurship
-                    coupled with a computer science background. I have real world skills of team leadership, communication,
-                    and decision making, and an excellent understanding of accounting, and finance.</p>
-                
-                <p>I've recently finished by Bachelors degree in computer science from the University of London, as of
-                    September, 2023 with a gpa of 4.0 (First class Honours). I am actively looking to join a AAA studio to
-                    collaborate with, and learn all aspects of software development within the games industry.</p>
+                <p>As a software engineer and a business owner, I combine my skills in C++, C#, Python, full stack engineering,
+                   and game development with a passion for programming and development. I have been running my own equestrian
+                   and wellness business for over 12 years, managing its website, financials, operations, and coaching, while
+                   also pursuing my master's degree in computer science with a specialization in computing systems from Georgia
+                   Tech’s OMSCS program. Prior to that, I completed a bachelor's degree in computer science from the University of London.</p>
+
+                <p>I have 3.5 years of related experience in software development, specializing in full stack engineering
+                   and game and graphics programming using C++, C#, Python, Javascript, Unreal Engine, and Unity. I have completed
+                   multiple online courses and certifications from Google, Codecademy, and MSU to enhance my knowledge
+                   and skills in this field. I am interested in software engineering, full stack engineering, or game development
+                   opportunities in Victoria, BC, Canada, or remotely, where I can apply my creativity, problem-solving, and teamwork
+                   abilities to create engaging and innovative solutions.</p>
 
                 <p>If you would like to connect, please view the 
                     <strong><a href="contact.html">contact</a></strong>
@@ -108,10 +111,6 @@
                     or follow me on
                     <strong><a href="https://www.linkedin.com/in/sam-sherrod/" target="_blank">LinkedIn</a></strong>.
                     I would love to hear from you!</p>
-                    
-                <ul>In addition to finishing my bachelors degree in computer science, I'm also currently pursuing:
-                    <li>MSU Game Design and Development with Unity 2020 Specialization (in progress - 65% complete)</li>
-                </ul>
 
                 <div class="clearfix"></div>
             </div>
