--- a/projects/hungry-horse.html
+++ b/projects/hungry-horse.html
@@ -86,7 +86,7 @@
                     </h2>
                     <hr>
                     <p class="intro-text text-center">
-                        In Development - Expected Release Spring 2024<br />
+                        In Development<br />
                         Professional App Made in Conjuction with a Phd. student at The University of Victoria<br />
                         <strong>Role:</strong> Lead Programmer and Game Designer
                     </p> 
