--- a/index.html
+++ b/index.html
@@ -97,13 +97,16 @@
                                 <img class="img-responsive img-full" src="assets/img/projects/Hungry Horse/hungry-horse-home-screen.png" alt="">
                             </div>
                             <div class="item">
-                                <img class="img-responsive img-full" src="assets/img/projects/Crypt-Raider/Crypt-Raider-Statue-Held.png" alt="">
+                                <img class="img-responsive img-full" src="assets/img/projects/Budget Planner/Withdrawls_Screen.png" alt="">
                             </div>
                             <div class="item">
                                 <img class="img-responsive img-full" src="assets/img/projects/Red Knight/Red Knight Title Screen.png" alt="">
                             </div>
                             <div class="item">
                                 <img class="img-responsive img-full" src="assets/img/projects/Shader Demo/Hologram Shader.png" alt="">
+                            </div>
+                            <div class="item">
+                                <img class="img-responsive img-full" src="assets/img/projects/Crypt-Raider/Crypt-Raider-Statue-Held.png" alt="">
                             </div>
                             <div class="item">
                                 <img class="img-responsive img-full" src="assets/img/projects/Star Hunter/Star Hunter 1.png" alt="">
@@ -151,7 +154,7 @@
                         <img class="img-responsive img-border img-left" src="assets/img/projects/Hungry Horse/hungry-horse-home-screen.png" alt="">
                     </a>
                     <hr class="visible-xs">
-                    <p>In Development - Expected Release Spring 2024</p>
+                    <p>In Development</p>
                     <p>A mobile game that collects data for research puposes in children with Autism. It is currently in development being
                         built with the Unity game engine, and funded by Mitacs.
                     </p>
@@ -160,17 +163,18 @@
 
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center"> <strong>Crypt Raider</strong> 3D Puzzle Demo - Personal Project</h2>
+                    <h2 class="intro-text text-center"> <strong>Budget Planner</strong> iOS/Android Mobile App - Student Project</h2>
                     <hr>
-                    <a href="projects/crypt-raider.html">
-                        <img class="img-responsive img-border img-left" src="assets/img/projects/Crypt-Raider/Crypt-Raider-Statue-Held.png" alt="">
+                    <a href="projects/budget-planner.html">
+                        <img class="img-responsive img-border img-left" src="assets/img/projects/Budget Planner/Withdrawls_Screen.png" alt="">
                     </a>
                     <hr class="visible-xs">
-                    <p>April 2023</p>
-                    <p>Crypt Raider is a 3D demo project made in Unreal Engine 5. The goal is to collect the golden statue and make your way to 
-                        the locked door.</p>
-                    <a href="projects/crypt-raider.html" class="btn btn-default btn-lg">Learn More</a>
-                    <a href="https://samsherrod.itch.io/crypt-raider" target="_blank" class="btn btn-default btn-lg">View Demo Online</a>
+                    <p>September 2023</p>
+                    <p>A budget planning mobile app that allows users to track their withdrawls and deposits in order to gain a better understanding
+                        of their money coming in and out.</p>
+                    <a href="projects/budget-planner.html" class="btn btn-default btn-lg">Read More</a>
+                    <a href="https://snack.expo.dev/@samsherrod/budget-planning-app" target="_blank" class="btn btn-default btn-lg">View Project</a>
+                    <a href="https://www.youtube.com/watch?v=AuOT4lDmO20" target="_blank" class="btn btn-default btn-lg">Watch on YouTube</a>
                 </div>
 
                 <div class="col-lg-12">
