--- a/projects.html
+++ b/projects.html
@@ -89,7 +89,7 @@
                         <img class="img-responsive img-border img-left" src="assets/img/projects/Hungry Horse/hungry-horse-home-screen.png" alt="">
                     </a>
                     <hr class="visible-xs">
-                    <p>In Development - Expected Release Spring 2024</p>
+                    <p>In Development</p>
                     <p>A mobile game that collects data for research puposes in children with Autism. It is currently in development being
                         built with the Unity game engine, and funded by Mitacs.
                     </p>
